# miind

./: .gitignore  .readthedocs.yaml  CHANGE_LOG  CMakeLists.txt  CMakeSettings.json  README  README.md  READMEcmake  Roadmap.md  index.md  pyproject.toml  setup.py  setupCiBuildPython.sh  setupCiBuildPython38.sh  setupCiBuildPython39.sh  vcpkg.json  vcpkgDynamic.json  vcpkgStatic.json
apps/: CMakeLists.txt  LargeNetwork.cpp  hex.tar  two-population.cpp
apps/BasicDemos/: CMakeLists.txt  miind-mpi.cpp  miind.cpp  population-example.cpp  two-population.cpp  wilsoncowan.cpp
apps/Blackboard/: CMakeLists.txt  activity_circuit.cpp  aexp_circuit.cpp  aexp_excit.cpp  baseline_circuit.cpp  blackboard-example.cpp  circuits.cpp  eib_pair.cpp  experiment_simplepop.cpp  partial_activity_circuit.cpp  population-example.cpp  wta1.cpp  wta2.cpp
apps/ClamLibTest/: CLAM.cpp  CMakeLists.txt  Example2DSheet.cpp  neato.cpp
apps/ConnectionismTest/: CMakeLists.txt  ConnectionismTest.cpp
apps/DynamicLib/: As.cpp  CMakeLists.txt  ExampleWilsonCowan.cpp  TestDynamicLib.cpp  WilsonCowanVerification.cpp
apps/IntegrationTwoDLib/: CMakeLists.txt  Euler.cpp  Euler.hpp~  MasterGroupTest.cpp  MeshAlgorithmGroupTest.cpp  aexp_brette.cpp  cond.cpp  condee2a5ff4-0087-4d69-bae3-c0a223d03693.mat  condee2a5ff4-0087-4d69-bae3-c0a223d03693.res  condee2a5ff4-0087-4d69-bae3-c0a223d03693.rev  rinzel.cpp  rinzel.cpp~
apps/LayerMappingTest/: CMakeLists.txt  main_GUI.cpp  main_console.cpp  simple_test.cpp
apps/LayerMapping_Python/: ExperimentSet.py  HMAX.py  HMAXFeedback.py  MyImage.py  README  Util.py  demo1.py
apps/MatrixGenerator/: Bind.cpp  Bind.hpp  CMakeLists.txt  ConstructResetMapping.cpp  ConstructResetMapping.hpp  CorrectStrays.cpp  CorrectStrays.hpp  GenerateMatrix.cpp  GenerateMatrix.hpp  MatrixGenerator.cpp  TranslationObject.cpp  TranslationObject.hpp  main.cpp
apps/Miind/: CMakeLists.txt  miind.cpp  testmiind.cpp
apps/Miind-mpi/: CMakeLists.txt  LargeNetwork.cpp  miind-mpi.cpp  two-population.cpp
apps/MiindRun/: CMakeLists.txt  MiindRun.cpp  test.xml
apps/MiindRunGPU/: CMakeLists.txt  MiindRunGPU.cpp
apps/MiindTest/: CMakeLists.txt  miindtest.cpp
apps/NDGridGenerator/: CMakeLists.txt  Cell.hpp  Grid.hpp  Point.hpp  Simplex.hpp  Triangulator.cpp  Triangulator.hpp  generate.cpp  pyhelper.h  python_triangulation_gen.py
apps/PerformanceGeom/: CMakeLists.txt  CanvasTest.cpp  CreateTwoPopulationNetwork.hpp  CreateTwoPopulationNetworkCode.hpp  LifOne.cpp  LifOne.py  LifOneCanvas.cpp  LifTwo.cpp  LifTwoCanvas.cpp  OnePop.cpp  QifCorrelated.cpp  QifJumpPoisson.cpp  ResponseData.cpp  TwoPopulationDefinitions.hpp
apps/Populist/: Analyze.cpp  CMakeLists.txt  ExperimentResponseCurve.cpp  PopulistExample.cpp  PopulistTest.cpp  TwoPopulistTest.cpp  UnitPopulist.cpp  WorkFlow.cpp
apps/Projection/: CMakeLists.txt  Projection.cpp
apps/ROOTTest/: CMakeLists.txt  LinkDef.h  ROOTTest.cpp  dict.cxx  dict.h  xterm.exe.stackdump
apps/SparseImplementationTest/: CMakeLists.txt  main.cpp
apps/Structnettest/: CMakeLists.txt  main.cpp
apps/Trader/: CMakeLists.txt  main.cpp
apps/TvbModels/: CMakeLists.txt
apps/UnitCudaLib/: AdapterTest.cpp  CMakeLists.txt  CudaEmulationTest.cpp  CudaEmulationTest.cu  CudaTest.cu  CudaTest.cuh  CudaUnit.cpp  FixtureAdapter.cpp  FixtureAdapter.hpp  MatrixTest.cpp  condee2a5ff4-0087-4d69-bae3-c0a223d03693_0_0.05_0_0_.mat
apps/UnitDynamicLib/: CMakeLists.txt  DelayAlgorithmTest.cpp  LocalDefinitions.h  SinglePopulationNetworkFixture.cpp  SinglePopulationNetworkFixture.h  SinglePopulationNetworkFixtureCode.h  UnitDynamicLib.cpp
apps/UnitGeomLib/: BinEstimatorTest.cpp  CMakeLists.txt  CurrentCompensationParameterTest.cpp  GeomAlgorithmTest.cpp  GeomInputConvertorTest.cpp  GeomParameterTest.cpp  InitialDensityParameterTest.cpp  LeakingOdeSystemTest.cpp  LifNeuralDynamicsTest.cpp  MuSigmaScalarProductTest.cpp  NeuronParameterTest.cpp  NumericalMasterEquationTest.cpp  OdeParameterTest.cpp  QifOdeSystemTest.cpp  UnitGeomLib.cpp
apps/UnitMPILib/: CMakeLists.txt  DelayAssemblyTest.cpp  HebbianAlgorithmTest.cpp  ProbabilityQueueTest.cpp  RateFunctorTest.cpp  UnitMPILib.cpp
apps/UnitPopulistLib/: AbstractCirculantTest.cpp  CMakeLists.txt  CharacteristicAlgorithmTest.cpp  InhibitionTest.cpp  InterpolationRebinnerTest.cpp  NonCirculantSolverTest.cpp  ProbabilityQueueTest.cpp  QIFAlgorithmTest.cpp  QIFParameterTest.cpp  RefractiveCirculantSolverTest.cpp  SingleInputZeroLeakEquationsTest.cpp  UnitPopulistLib.cpp
apps/UnitTwoDLib/: 2DUnit.cpp  AdapterTest.cpp  CMakeLists.txt  CSRTest.cpp  FidTest.cpp  FixtureOde2DSystemGroup.cpp  FixtureOde2DSystemGroup.hpp  GeneratorTest.cpp  KDTreeTest.cpp  LineSegmentTest.cpp  MasterTest.cpp  MeshAlgorithmTest.cpp  MeshTest.cpp  Ode2DSystemGroupTest.cpp  Ode2DSystemTest.cpp  QuadrilateralTest.cpp  StatTest.cpp  TransitionMatrixGeneratorTest.cpp  TransitionMatrixTest.cpp  TriangleTest.cpp  UniformTest.cpp  aexp0cfa5d69-a740-4474-b8b6-b39870e2f5ef.fid  aexpoverview.mesh  condee2a5ff4-0087-4d69-bae3-c0a223d03693.config  condee2a5ff4-0087-4d69-bae3-c0a223d03693.mesh  condee2a5ff4-0087-4d69-bae3-c0a223d03693.res  condee2a5ff4-0087-4d69-bae3-c0a223d03693.res~  condee2a5ff4-0087-4d69-bae3-c0a223d03693.stat  condee2a5ff4-0087-4d69-bae3-c0a223d03693_0_0.05_0_0_.mat  life21da341-bd4a-4077-93c2-4d11804d0882.model  life21da341-bd4a-4077-93c2-4d11804d0882_0.03_0_0_0_.mat  multiple.stat  simple.mesh  test.stat  (+1 more)
examples/: CMakeLists.txt
libs/: CMakeLists.txt  Makefile.am
python/: CMakeLists.txt  algorithms.py  bary.py  bary3.py  cmake_template  cmake_template_lib  codegen.py  codegen3.py  codegen_lib.py  codegen_lib3.py  connections.py  demo2D.py  directories.py  directories3.py  grid_BoothRinzelMN.py  grid_adex.py  grid_cond.py  grid_fn.py  grid_generate.py  grid_izhikevich.py  grid_rybak.py  include.py  jobs.py  launch.py  lost.py  mesh.py  mesh3.py  meshtest3.py  miind.py  miindTVBlibs.py  miind_lib.py  miind_settings_template  miind_ui.py  miindio.py  nodes.py  ode2dsystem.py  parametersweep.py  reporting.py  setup_grid.py  simulation.py  (+6 more)
(+2034 files in other folders)
