ADD_SUBDIRECTORY( BasicDemos )
ADD_SUBDIRECTORY( largeNetwork )
ADD_SUBDIRECTORY( UnitMPILib )
ADD_SUBDIRECTORY( UnitGeomLib )
ADD_SUBDIRECTORY( UnitTwoDLib )
ADD_SUBDIRECTORY( IntegrationTwoDLib )
ADD_SUBDIRECTORY( PerformanceGeom )
ADD_SUBDIRECTORY( Projection )
ADD_SUBDIRECTORY( MatrixGenerator )
ADD_SUBDIRECTORY( NDGridGenerator )
ADD_SUBDIRECTORY( MiindRun )
#ADD_SUBDIRECTORY( TvbModels )
if(ENABLE_CUDA)
if(APPLE)
message("Cuda support is not defined on Mac Os")
else(APPLE)
ADD_SUBDIRECTORY(UnitCudaLib)
ADD_SUBDIRECTORY( MiindRunGPU )
endif(APPLE)
endif(ENABLE_CUDA)
